# Coverage_computation_cuda

./: CMakeLists.txt  README.md  launch.sh  launch_debug.sh
include/: camera.h  cudaCoverage.cuh  cudaUtils.cuh  depth.h  mesh.h
src/: camera.cpp  cudaCoverage.cu  depth.cpp  main.cpp  mesh.cpp
